2010-09-27  Kenichi Handa  <handa@m17n.org>

	* tar-mode.el (tar-header-block-tokenize): Decode filenames in
	"ustar" format.

2010-09-27  Kenichi Handa  <handa@m17n.org>

	* international/mule.el (define-coding-system): Docstring fixed.

	* international/mule-diag.el (describe-character-set): Use princ
	with proper print-length and print-level instead of insert.

2010-09-26  Juanma Barranquero  <lekktu@gmail.com>

	* window.el (walk-windows): Doc fix (bug#7105).

2010-09-23  Glenn Morris  <rgm@gnu.org>

	* isearch.el (isearch-lazy-highlight-cleanup)
	(isearch-lazy-highlight-initial-delay)
	(isearch-lazy-highlight-interval)
	(isearch-lazy-highlight-max-at-a-time, isearch-lazy-highlight-face):
	* net/net-utils.el (ipconfig-program-options):
	Move aliases to options before the associated definitions.

2010-09-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* newcomment.el (comment-normalize-vars): Better test validity of
	comment-end-skip.

2010-09-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/float-sup.el (float-pi): New name for `pi'.
	(float-e): New name for `e'.
	(degrees-to-radians, radians-to-degrees):
	* calendar/solar.el (solar-longitude):
	* calculator.el (calculator-registers, calculator-funcall):
	* textmodes/artist.el (artist-spray-random-points):
	* play/bubbles.el (bubbles--initialize-images): Use new names.

2010-09-19  Eric M. Ludlam  <zappo@gnu.org>

	Update to CEDET 1.0's version of EIEIO.

	* emacs-lisp/eieio.el (eieio-specialized-key-to-generic-key):
	New function.
	(eieio-defmethod, eieio-generic-form, eieio-generic-call): Use it.
	(eieio-default-eval-maybe): Eval val instead of unquoting only.
	(class-precedence-list): If class is nil, return nil.
	(eieio-generic-call): If class of first input arg is nil, don't
	look up static methods, and do check for primary methods.
	(initialize-instance): See if the default needs to be evaluated
	during the constructor.
	(eieio-perform-slot-validation-for-default): Don't do the check