@@ -1,3 +1,8 @@
+2010-09-27  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* emacs-lisp/byte-opt.el (byte-optimize-form-code-walker): Avoid
+	infinite recursion on erroneous lambda form.  (Bug#7114)
+
 2010-09-27  Kenichi Handa  <handa@m17n.org>
 
 	* tar-mode.el (tar-header-block-tokenize): Decode filenames in
